test/langtools/tools/javac/valhalla/lworld-values/CheckFlattenableCycles.out
CheckFlattenableCycles.java:15:48: compiler.err.cyclic.value.type.membership: CheckFlattenableCycles
CheckFlattenableCycles.java:13:52: compiler.err.cyclic.value.type.membership: CheckFlattenableCycles.InnerValue
2 errors